add discount in gift + discount recent in shopping caard add custom exception